--- a/jsnack11/index.html
+++ b/jsnack11/index.html
@@ -21,7 +21,18 @@
 
     <header></header>
 
-    <main></main>
+    <main>
+        <div class="container-fluid">
+            <div class="row p-4 justify-content-center">
+                <div class="col-12">
+                    <div class="my-container d-flex justify-content-center">
+                        <div id="my-red" class="text-center me-1"></div>
+                        <div id="my-green" class="text-center"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <!--javascript-->
